--- a/templates/galeria/base.html
+++ b/templates/galeria/base.html
@@ -14,8 +14,9 @@
 </head>
 
     <body>
-
+        {% include 'galeria/partials/_menu.html' %}
         {% block content %}{% endblock content %}
+        {% include 'galeria/partials/_footer.html' %}
         
     </body>
 
